# Behavior1k-MAPLE

./: .gitignore  README.md  pyproject.toml
behavior1k_mp/: __init__.py  __main__.py  hybrid_policy.py  orchestrator.py
behavior1k_mp/actions/: __init__.py  close_right_gripper.py  navigate_to_radio.py  pick_up_radio_approach.py  pick_up_radio_grasp.py  press_radio_base.py  put_down_radio.py  wrap_up_policy.py
behavior1k_mp/collect/: __init__.py  cli.py
behavior1k_mp/core/: action.py  hybrid_policy.py  orchestrator.py
behavior1k_mp/core/grasp/: waypoints.py
behavior1k_mp/core/ik/: __init__.py  r1pro_constants.json
behavior1k_mp/core/phase_detector/: detector.py  fit.py
behavior1k_mp/core/pick_library/: build.py
behavior1k_mp/evaluation/: __init__.py  cli.py
behavior1k_mp/grasp/: __init__.py
behavior1k_mp/ik/: __init__.py
behavior1k_mp/phase_detector/: __init__.py  fit.py
behavior1k_mp/phase_detector/checkpoints/: kmeans.pkl  pca.pkl  phase_map.json
behavior1k_mp/phase_detector/checkpoints/press_modes/: episode_labels.json  library_A.pkl
behavior1k_mp/pick_library/: __init__.py  build.py  lookup.py
behavior1k_mp/tasks/: __init__.py
behavior1k_mp/tasks/turning_on_radio/: __init__.py
behavior1k_mp/utils/: __init__.py  action_bridge.py  obs.py  pose.py
configs/policy/: hybrid_mp.yaml
docs/: README.md  architecture.md  task_authoring.md
docs/fsm/: turning_on_radio.mmd
docs/results/: README.md
eval_recovery/: eval_recovery.py
scripts/: analyze_action_deltas.py  analyze_phase2_press.py  build_pick_library.py  build_press_libraries.py  build_press_lookup_library.py  eval_phase_detector.py  fit_phase_detector.py  inspect_task_info.py  monitor_recovery_jobs.sh  smoke_test_one_instance.py
slurm/: collect.sbatch  eval_openpi.sbatch  eval_openpi_b2026.sbatch  eval_openpi_recovery.sbatch  eval_xvla.sbatch  shared_env.sh
(+11 files in other folders)
