[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "behavior1k_mp"
version = "0.1.0"
description = "MAPLE — hybrid motion-planner + X-VLA policy pipeline for BEHAVIOR-1K (data collection + leaderboard evaluation)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn>=1.3",
    "joblib",
    "pyarrow",
    "torch",
]

# Mark's diff-IK requires pytorch_kinematics; install separately in the
# conda env:  pip install pytorch_kinematics

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
maple = "behavior1k_mp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["behavior1k_mp*"]

[tool.setuptools.package-data]
# Ship per-task checkpoints + task configs + the R1Pro URDF used by IK.
behavior1k_mp = [
    "tasks/*/checkpoints/*",
    "tasks/*/checkpoints/**/*",
    "tasks/*/config.yaml",
]
